[package]
name = "blog_os"
version = "0.1.0"
authors = ["Jens J Parappallil <jensjp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-blog_os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
